Elements are created and button works

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Project Name Generator</title>
+    <link rel="stylesheet" href="main.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <h1>Project Name Generator</h1>
+      <h2 class="name">Amazing Alps</h2>
+      <a href="#" class="btn">Generate Name</a>
+    </main>
+    <script src="script.js"></script>
+  </body>
 </html>
