Removed starter text in H2 and changed innerHTML to innerText

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <h1>Project Name Generator</h1>
-      <h2 class="name">Amazing Alps</h2>
+      <h2 class="name"></h2>
       <a href="#" class="btn">Generate Name</a>
     </main>
     <script src="script.js"></script>
