--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <main>
-      <h1>Project Name Generator</h1>
-      <h2 class="name"></h2>
+      <h1 class="name">Project Name Generator</h1>
       <a href="#" class="btn">Generate Name</a>
     </main>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
