chnagedlink to button

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   <body>
     <main>
       <h1 class="name">Project Name Generator</h1>
-      <a href="#" class="btn">Generate Name</a>
+      <button class="btn">Generate Name</butto>
     </main>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
