added ids to elements for JS use

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <main>
-      <h1 class="name">Project Name Generator</h1>
-      <button class="btn">Generate Name</butto>
+      <h1 class="name" id="name">Project Name Generator</h1>
+      <button class="btn" id="button">Generate Name</butto>
     </main>
     <script src="script.js"></script>
   </body>
