--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Project Name Generator</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <main>
       <h1 class="name" id="name">Project Name Generator</h1>
-      <button class="btn" id="button">Generate Name</butto>
+      <button type="button" class="btn" id="button">Generate Name</butto>
     </main>
     <script src="script.js"></script>
   </body>
